Subundo primeira versao do Validador CPF

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="container">
             <h1 class="page-header">Validador de CPF</h1>
             <p>Através deste simples algoritmo, veremos diversos recursos e habilidades da linguagem Javascript</p>
+            <h6 id="version">Versão: 1.0</h6>
         </div>
 
     </div>
@@ -39,7 +40,7 @@
                 </div>
                 <small class="form-text text-muted">Digite somente numeros</small>
             </div>
-            <button type="button" class="btn btn-info">Validar !</button>
+            <button onclick="validarCPF()" type="button" class="btn btn-info">Validar !</button>
         </form>
     </div>
     <div class="container page-header">
